Changelog
---------

Version 0.8.x
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Added template source annotations on exceptions raised while
  rendering a template.

Version 0.8 - March 19, 2008
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Added support for 'nocall' and 'not' (for path-expressions).

- Added support for path- and string-expressions.

- Abstracted expression translation engine. Expression implementations
  are now pluggable. Expression name pragmas are supported throughout.

- Formalized expression types

- Added support for 'structure'-keyword for replace and content.

- Result of 'replace' and 'content' is now escaped by default.

- Benchmark is now built as a custom testrunner

Version 0.7 - March 10, 2008
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Added support for comments; expressions are allowed
  inside comments, i.e.

     <!-- ${'Hello World!'} -->

  Comments are always included.
  
Version 0.6 - February 24, 2008
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Added support for text templates; these allow expression
  interpolation in non-XML documents like CSS stylesheets and
  javascript files.

Version 0.5 - February 23, 2008
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Expression interpolation implemented.

Version 0.4 - February 22, 2008
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Engine now uses cStringIO yielding a 2.5x performance
  improvement. Unicode is now handled correctly.

Version 0.3 - December 23, 2007
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Code optimization; bug fixing spree  

- Added ``ViewPageTemplateFile`` class
  
- Added support for i18n
  
- Engine rewrite; improved code generation abstractions 
  
Version 0.2 - December 5, 2007
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Major optimizations to the generated code  

Version 0.1 - December 3, 2007
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- First public release
  